2006-06-07  Mickael Remond  <mickael.remond@process-one.net>

	* src/mod_pubsub/mod_pubsub.erl: Support for pubsub node creation
	ACL. It is now possible to limit the node creation rights using an
	ACL from ejabberd config file (Thanks to Christophe Romain).
	* doc/guide.tex: Likewise.
	* src/ejabberd.cfg.example.

	* src/mod_pubsub/mod_pubsub.erl: Discovery query on an item does
	no more return an "item not found error". Discovery stop correctly
	at the item level (Thanks to Christophe Romain).
	
2006-06-02  Mickael Remond  <mickael.remond@process-one.net>

	* src/web/ejabberd_http_poll.erl: Messages polled between the
	the last client request and the polling timeout were lost. Those
	messages are now resent using ejabberd routing mechanisms.

	* src/web/ejabberd_http.erl: The web module now accepts HTTP
	absolute URL (used behind a proxy). This apply to HTTP polling and
	to the web interface (Thanks to Jean-Sebastien Pedron).
	
2006-05-29  Mickael Remond  <mickael.remond@process-one.net>

	* src/mod_roster.erl: According to RFC3921 section 9.2, outbound
	subscribe presence packets must be sent, even if the user has already
	asked for subcription previously (subscription: none and pending: out).
	The mod_roster now conforms to this behaviour. 
	* src/mod_roster_odbc.erl: Likewise.

2006-05-27  Mickael Remond  <mickael.remond@process-one.net>

	* src/configure.ac: Added an optional check for krb5.h in
	configure. ejabberd can now be build directly on RedHat and
	OpenBSD.

2006-05-27  Alexey Shchepin  <alexey@sevcom.net>

	* src/msgs/sk.msg: Slovak translation (thanks to Juraj Michalek
	and SkLUG)

2006-05-26  Alexey Shchepin  <alexey@sevcom.net>

	* src/odbc/pg.sql: Updated

	* src/mod_shared_roster.erl: Updated

	* src/ejabberd_sm.erl: Bugfix

	* src/mod_roster.erl: Bugfix
	* src/mod_roster_odbc.erl: Likewise

2006-05-23  Mickael Remond  <mickael.remond@process-one.net>

	* src/mod_roster.erl: The subscribe request are now resend at login as